backenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockroomapp
  namespace: stockapp
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: stockroom-app
  template:
    metadata:
      labels: 
        app: stockroom-app
    spec:
      containers:
       - name: java-app
         image: 557809208863.dkr.ecr.us-east-1.amazonaws.com/stockapp/backend:v1
         imagePullPolicy: IfNotPresent

         ports:
           - containerPort: 8080
         startupProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
          failureThreshold: 3
            
         livenessProbe:
           httpGet:
             path: /health
             port: 8080
           initialDelaySeconds: 45
           periodSeconds: 10
           failureThreshold: 3

         readinessProbe:
           httpGet:
             path: /ready
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 10
           failureThreshold: 3

         resources:
           requests:
             memory: 256Mi
             cpu: 250m
           limits:
             memory: 512Mi
             cpu: 500m
