frontenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockroomfrontend
  namespace: stockapp
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: stockroom-ui
  template:
    metadata:
      labels: 
        app: stockroom-ui
    spec:
      containers: 
        - name: nginx-app
          image: login-ui:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
