backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockapp-backend-service
  namespace: stockapp
spec:
  selector:
    app: stockroom-app
  ports: 
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
