frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockapp-frontend-service
  namespace: stockapp
spec:
  selector:
    app: stockroom-ui
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
