backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockroom-ingress
  namespace: stockapp
spec:
  rules:
    - host: stockroom.local 
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: stockapp-backend-service
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: stockapp-backend-service
                port:
                  number: 8080
          - path: /ready
            pathType: Prefix
            backend:
              service:
                name: stockapp-backend-service
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: stockapp-backend-service
                port:
                  number: 8080
